# projet-temp_reel

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/rc522/: CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
components/rc522/examples/basic/: CMakeLists.txt
components/rc522/examples/basic_i2c/: CMakeLists.txt
components/rc522/examples/memory_dump/: CMakeLists.txt
components/rc522/examples/multiple_scanners/: CMakeLists.txt
components/rc522/examples/read_write/: CMakeLists.txt
components/rc522/include/: rc522.h  rc522_driver.h  rc522_pcd.h  rc522_picc.h  rc522_types.h
components/rc522/include/driver/: rc522_i2c.h  rc522_spi.h
components/rc522/include/picc/: rc522_mifare.h
components/rc522/internal/: rc522_driver_internal.h  rc522_helpers_internal.h  rc522_internal.h  rc522_pcd_internal.h  rc522_picc_internal.h  rc522_types_internal.h
components/rc522/src/: rc522.c  rc522_driver.c  rc522_helpers.c  rc522_pcd.c  rc522_picc.c
components/rc522/src/driver/: rc522_i2c.c  rc522_spi.c
components/rc522/test/: CMakeLists.txt  sdkconfig.defaults
components/rc522/test/main/: test.c  (+2 more)
main/: CMakeLists.txt  blink_example_main.c  capture_gaz.c  capture_gaz.h  capture_mouv.c  capture_mouv.h  capture_mov.c  capture_mov.h  capture_rfid.c  capture_rfid.h  capture_temp.c  capture_temp.h  http_post.c  http_post.h  http_server.c  http_server.h  idir_wifi.c  idir_wifi.h  main.c  server.c  server.h  wifi_app.c  wifi_app.h
main/backup/: idir_wifi.c  server.c  server.h
main/webpage/: app.css  app.js  index.html  scripts.js  styles.css
(+13 files in other folders)
