idf_component_register(SRCS "capture_mov.c" "main.c" "http_post.c" "wifi_app.c" "http_server.c" "capture_rfid.c" "capture_gaz.c" "capture_temp.c" "capture_mov"
                    INCLUDE_DIRS "."
                    EMBED_FILES webpage/app.css webpage/app.js webpage/favicon.ico webpage/index.html webpage/open.png webpage/closed.png)
