idf_component_register(SRCS "capture_mov.c" "main.c" "http_post.c" "wifi_app.c" "http_server.c" "capture_rfid.c" "capture_gaz.c" "capture_temp.c" "capture_mov"
                    INCLUDE_DIRS "."
                    EMBED_FILES webpage/styles.css webpage/scripts.js webpage/favicon.ico webpage/index.html webpage/satoshi-medium.ttf webpage/chart.js webpage/fns-date-adapter.js)
                
